v1.2.7.?
- Negotiate: like NTLM but less in danger of getting removed in Windows 11...
- NTLM/Negotiate: cache by SessionID to avoid 401's on every request
- parse ?x&y=1 as 'x'='','y'='1' in query string and form data (was 'x&y'='1' previously)

v1.2.6.466
- issue converting IPv6 address to string
- issue with IXxmParameterPostFile.SaveToFile
- issue with xxmWebSocket.pas: frames recieved in a single packet were not processed
- issue with xxmISAPI* spooling larger static files
- xxmHttp: WinSock 2.2 (ws2_32.dll)
- xxmp.pas: respond to OPTIONS and TRACE with 501 Not Implemented
- jsonDoc.pas: v1.2.2
- switched to Delphi Community Edition
- bug with IXxmContextSuspend.Suspend with more than one distinct EventKey

v1.2.5.450
- project registry "xxm.json" (auto-conversion of "xxm.xml")
- project file "Web.xxmp" JSON (auto-conversion from XML)
    ### ATTENTION ### ATTENTION ### ATTENTION ###
    xxmProject and xxm handlers are fitted with a transitional
    automatic conversion procedure that will convert XML project files (Web.xxmp)
    and the project registry (xxm.xml) into JSON files. (Web.xxmp in place,
    storing a Web_xxmp.bak copy; xxm.json)
    This may cause incompatibilities if different xxm versions are required to
    coexist on the same installation(s).
    This procedure (and all code using XML) is scheduled to be removed at a
    later, currently undetermined, version.
- fixed issue with custom parserValues spilling into next file processed
- IXxm* interfaces: all string arguments now with 'const'
	### ATTENTION ### ATTENTION ### ATTENTION ###
	This may cause errors on generated xxmp.pas:
		xxmp.pas() Error: Declaration of 'LoadPage' differs from previous declaration
		xxmp.pas() Error: Declaration of 'LoadFragment' differs from previous declaration
	Please update both methods by adding 'const' to the arguments with a string type.
- xxmIsapi*: Redirect: set 'Cache-control' to 'nocache' unless it was set already