@@ -2,6 +2,7 @@ v1.2.7.?
 - Negotiate: like NTLM but less in danger of getting removed in Windows 11...
 - NTLM/Negotiate: cache by SessionID to avoid 401's on every request
 - parse ?x&y=1 as 'x'='','y'='1' in query string and form data (was 'x&y'='1' previously)
+- per context project entry cache (avoids project registry lock on each request)
 
 v1.2.6.466
 - issue converting IPv6 address to string
